@@ -88,9 +88,7 @@ class _BaseHDU(object):
         """
 
         klass = _hdu_class_from_header(cls, header)
-
-        return super(_BaseHDU, cls).__new__(klass, data=data, header=header,
-                                            **kwargs)
+        return super(_BaseHDU, cls).__new__(klass)
 
     def __init__(self, data=None, header=None):
         self._header = header
